--- a/popup.html
+++ b/popup.html
@@ -84,6 +84,9 @@
      .tooltip > p {
        text-align:left;
      }
+     .page-header {
+       margin: 20px 0 20px;
+     }
     </style>
 
     <!--
@@ -111,7 +114,7 @@
       </div>
       <div class="container">
         <div class="page-header">
-          <h3>Thrillist Rooms <small class="pull-right">
+          <h3>Rooms <small class="pull-right">
             <input id="4floor" class="form-control floor-selector" type="checkbox" checked><label for="4floor"> 4th</label>
             <input id="5floor" class="form-control floor-selector" type="checkbox" checked><label for="5floor"> 5th</label>
             <input id="6floor" class="form-control floor-selector" type="checkbox" checked><label for="6floor"> 6th</label>
@@ -129,7 +132,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr> 
+            <tr>
 
             </tr>
           </tbody>
@@ -137,7 +140,7 @@
       </div>
     </div>
   </body>
+  <script src="firebase-5.1.0.js"></script>
   <script src="popup.js"></script>
   <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
 </html>
-
